# se-spring-2026

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
assignments/a3-testing/: conftest.py  pytest.ini
assignments/bbs-frontend/060290/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
assignments/bbs-frontend/Almar-T/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
assignments/bbs/astarinmymind/: .gitignore  README.md  bbs.py  bbs_db.py  db.py  migrate.py  print_qr.py  printer.py  pyproject.toml  test_bbs.py  web.py
assignments/bbs/gavinanelson/: .gitignore  README.md  app_paths.py  bbs.py  bbs_db.py  bbs_db_format.py  bbs_db_store.py  bbs_tui.py  bbs_tui_backend.py  db.py  migrate.py  pyproject.toml  requirements.txt  seed_fake_data.py
assignments/bbs/gavinanelson/tests/: __init__.py  sqlalchemy_test_helper.py  support.py  test_bbs.py  test_bbs_db.py  test_bbs_tui_backend.py  test_migrate.py  test_operations_and_paths.py  test_security_and_runtime.py  test_seed_fake_data.py  test_sqlalchemy_usage.py  test_stress.py  test_submission_core.py  test_submission_gold.py
backend/: main.py
backend/game/: __init__.py
backend/routers/: advice.py  game.py  sessions.py  tables.py
backend/tests/: test_endpoints.py
frontend/: vite.config.ts
specs/: a4-bbs-frontend.md
starter/assignment2/: verify_api.py
starter/assignment3/: RUN.md  bug_catalog.md
(+939 files in other folders)
