[project]
name = "bulletin-board"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=3.0.1",
    "flask>=3.1.3",
    "pillow>=12.2.0",
    "qrcode>=8.2",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
