[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bbs-terminal"
version = "0.1.0"
description = "Terminal-first bulletin board system for the Assignment 1 BBS project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pillow>=12.2.0",
  "SQLAlchemy==2.0.49",
  "textual==8.2.3",
  "textual-image>=0.11.0",
]

[project.scripts]
bbs = "bbs:main"
bbs-db = "bbs_db:main"
bbs-migrate = "migrate:main"
bbs-seed = "seed_fake_data:main"
bbs-tui = "bbs_tui:main"

[tool.setuptools]
py-modules = [
  "app_paths",
  "bbs",
  "bbs_db",
  "bbs_db_format",
  "bbs_db_store",
  "bbs_tui",
  "bbs_tui_backend",
  "db",
  "migrate",
  "seed_fake_data",
]
